// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component should render with a stack trace when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        An error has occurred
      </span>
      Something has gone wrong
    </h1>
    <details
      class="govuk-details"
      open=""
    >
      <summary
        class="govuk-details__summary"
      >
        <span
          class="govuk-details__summary-text"
        >
          Stack trace
        </span>
      </summary>
      <div
        class="govuk-details__text"
      >
        <pre
          class="code overflow-scroll"
        >
          Stack trace...
        </pre>
      </div>
    </details>
  </div>
</div>
`;

exports[`Error component should render with default props 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        An error has occurred
      </span>
      Something has gone wrong
    </h1>
  </div>
</div>
`;

exports[`Error component should render with location when passed 1`] = `
<div
  class="govuk-grid-row"
>
  <div
    class="govuk-grid-column-full"
  >
    <h1
      class="govuk-heading-l"
    >
      <span
        class="govuk-caption-l"
      >
        An error has occurred
      </span>
      Something has gone wrong
    </h1>
  </div>
</div>
`;
